Fix overflow issue - page height grows with selection depth

--- a/frontend/src/tools/components/Excel/Sheet/Sheet.scss
+++ b/frontend/src/tools/components/Excel/Sheet/Sheet.scss
@@ -1,6 +1,7 @@
 .sheet {
-  // display: flex;
   height: 100%;
+
+  overflow: hidden;
 
   &:focus {
     outline: none;
